crates/lang/macro/tests/ui/fail/M-05-message-invalid-selector.stderr
error: custom attribute panicked
 --> $DIR/M-05-message-invalid-selector.rs:3:1
  |
3 | #[ink::contract]
  | ^^^^^^^^^^^^^^^^
  |
  = help: message: invalid selector - a selector must consist of four bytes in hex (e.g. `selector = "0xCAFEBABE"`)
